# cigit

./: .ci-auth.yml  .ci-git.yml  404.html  MANIFEST.in  README.md  index.html  pyproject.toml  sitemap.xml
docs/: mkdocs.yml
docs/docs/: index.md
search/: search_index.json
src/cigit/: __init__.py  cigit.py  command.py  gitman.py  pipeline.py  utils.py
tests/: cmd.py  test_pipelines.py
