[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project]
name = "cigit"
version = "0.0.1"
description = "GraphQL Made Easy"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "hlop3z", email = "23062270+hlop3z@users.noreply.github.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = ["pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/hlop3z/cigit/"
# Documentation = "https://hlop3z.github.io/fastberry/"

[project.scripts]

[project.optional-dependencies]

[tool]
[tool.pdm]

[tool.pdm.build]
package-dir = "src"

[tool.pdm.dev-dependencies]
devops = [
    "isort>=5.10.1",
    "black>=22.6.0",
    "pylint>=2.15.0",
    "bandit>=1.7.4",
    "watchdog>=2.1.9",
    "twine>=4.0.1",
    "mypy>=0.991",
    "ssort>=0.11.6",
    "pre-commit>=2.20.0",
]
docs = ["mkdocs", "mkdocs-material"]
test = ["pytest>=7.2.2"]

[tool.pdm.scripts]
pre = { shell = "pre-commit run --all-file" }
# Test
test2 = "python tests/cmd.py"
test = "python tests/test_pipelines.py"
# Docs
docs-dev = { shell = "cd docs/ && python -m mkdocs serve --dev-addr 0.0.0.0:8055" }
docs-build = { shell = "cd docs/ && python -m mkdocs build" }
docs-gh = { shell = "cd docs/ && python -m mkdocs gh-deploy --force" }
# PyPi Upload
pypi = "twine upload dist/*"
